syntax = "proto3";

package sample;

option go_package = "a.yandex-team.ru/cloud/dataplatform/schemaregistry/examples/proto;sample";

import "cloud/dataplatform/api/schemaregistry/options/options.proto";

message Smol {
    option (yandex.cloud.priv.schemaregistry.v1.options.schemaregistry).enabled = true;

    string field1 = 1;
    SuparSmol field2 = 2;
    int64 field3 = 3;
}

message SuparSmol {
    string field2 = 1;
    bool field1 = 2;
}
